--- a/diapos/Tarea_Radiacion.tex
+++ b/diapos/Tarea_Radiacion.tex
@@ -37,7 +37,7 @@ Para el cálculo de la \textbf{radiación en el plano horizontal} seguiremos el 
 \item Obtén series temporales de \textbf{medidas diarias} de radiación solar de 3 estaciones meteorológicas (recomendable longitud de 10 años).
 \item Filtra cada serie empleando límites físicos. \label{filtrado}
 \item Elige una localización dentro del perímetro definido por las tres estaciones. Obtén las \textbf{12 medias mensuales} en esta localización empleando interpolación espacial (IDW) a partir de las \textbf{12 medias mensuales} de la radiación filtrada de cada estación (punto \ref{filtrado}). \label{idw}
-\item Obtén medias temporales de radiación solar de un servicio satelital (preferiblemente CMSAF,  empleando QGis o software similar; véase anexo) para una región que cubra las tres estaciones\footnote{Los datos de radiación proporcionados por CMSAF son medias diarias de \textbf{irradiancia} (\(W/m^2\)). Por tanto, debes multiplicarlos por 24 para obtener valores diarios de \textbf{irradiación}.}.\label{satelite}
+\item Obtén medias temporales de radiación solar de un servicio satelital (preferiblemente CMSAF,  empleando QGis o software similar; véanse anexos \ref{sec:qgis} y \ref{sec:cmsaf}) para una región que cubra las tres estaciones\footnote{Los datos de radiación proporcionados por CMSAF son medias diarias de \textbf{irradiancia} (\(W/m^2\)). Por tanto, debes multiplicarlos por 24 para obtener valores diarios de \textbf{irradiación}.}.\label{satelite}
 \item Compara las medias mensuales de las tres estaciones con las estimaciones satelitales empleando métricas estadísticas (MBD, RMSD, MAD).
 \item Combina la estimación satelital en la localización del punto \ref{idw} con las medias mensuales obtenidas en ese punto.
 \end{enumerate}
@@ -60,8 +60,8 @@ A continuación, realizaremos el cálculo de la \textbf{radiación en el plano d
 
 \clearpage
 
-\section*{Anexo: QGIS}
-\label{sec:orgb85862a}
+\section{Anexo: QGIS}
+\label{sec:qgis}
 
 \href{https://qgis.org/es/site/}{QGIS} is un proyecto de código abierto de un \href{https://es.wikipedia.org/wiki/Sistema\_de\_informaci\%C3\%B3n\_geogr\%C3\%A1fica}{sistema de información
 geográfica} (SIG). Este software es capaz de manejar datos
@@ -99,11 +99,35 @@ de estaciones). Establecer proyección a EPSG:4326.
 \begin{enumerate}
 \item \emph{Layer containing sampling points} : SIAR
 \item \emph{Layers with bands to get values from}: 12 SISmm.
-\item \emph{Output point vector layer}: crear un nuevo fichero.
+\item \emph{Output point vector layer}: \emph{Browse}) y crear un nuevo fichero.
 \item Aceptar: aparece una nueva capa con el nombre del fichero creado.
 \item En esta nueva capa, con el botón derecho aparece un menú de
   opciones: tabla de atributos (valores extraídos). También se puede
   exportar.
 \end{enumerate}
 \end{enumerate}
+
+\section{Anexo: CM-SAF}
+\label{sec:cmsaf}
+\href{https://wui.cmsaf.eu/safira/action/viewProduktSearch}{CM-SAF}
+proporciona datos derivados de imágenes de satélite:
+\begin{itemize}
+\item Operational Products: conjuntos de datos proporcionados casi en
+  tiempo real.
+
+\item Climate Data Records (CDR): series temporales de medidas de
+  longitud, consistencia, y continuidad suficiente para determinar la
+  variabilidad y cambios en el clima.
+\end{itemize}
+
+Los datos de radiación global se denominan \emph{Surface incoming shortwave radiation} (SIS). Para esta práctica utilizaremos productos operacionales y las medias mensuales, disponibles en: \url{https://wui.cmsaf.eu/safira/action/viewProduktDetails?eid=21989_21990&fid=27}.
+
+Para obtener estos datos para una región de interés hay que seguir este procedimiento:
+
+\begin{enumerate}
+\item Elegir la región: \emph{Change projection / spatial resolution / domain}. En este apartado se puede definir la región de forma gráfica en el mapa o rellenando en los recuadros de longitud y latitud que hay a continuación. Una vez definida la zona, pasamos al siguiente apartado.
+\item Definir el rango temporal: \emph{Proceed to time range selection}. En este apartado se indica el comienzo y final deseado. Al ser medias mensuales, obtendremos un fichero raster para cada mes de este rango. Por ejemplo, si elegimos un rango temporal que incluye 10 años, obtendremos 120 ficheros raster. Para esta práctica lo haremos de forma más simplificado, eligiendo únicamente un año para obtener 12 ficheros raster, por ejemplo desde 2022-01-01 hasta 2022-12-31. 
+\item Una vez definida la región y el rango temporal, se puede realizar la solicitud: \emph{Add to order cart}. Para poder finalizar la solicitud es necesario tener usuario y contraseña. Si no es así, hay que registrarse de forma gratuita.
+\end{enumerate}
+
 \end{document}
