--- a/diapos/Tarea_Radiacion.tex
+++ b/diapos/Tarea_Radiacion.tex
@@ -27,62 +27,157 @@
 
 \maketitle
 
-En esta actividad vas a estimar las medias mensuales de la radiación global incidente en el plano horizontal y en el plano de un generador.
+En esta actividad vas a estimar las medias mensuales de la radiación
+global incidente en el plano horizontal y en el plano de un generador.
 
 \section{Radiación en el plano horizontal}
 
-Para el cálculo de la \textbf{radiación en el plano horizontal} seguiremos el siguiente itinerario:
+Para el cálculo de la \textbf{radiación en el plano horizontal}
+seguiremos el siguiente itinerario:
 
 \begin{enumerate}
-\item Obtén series temporales de \textbf{medidas diarias} de radiación solar de 3 estaciones meteorológicas (recomendable longitud de 10 años).
+\item Obtén series temporales de \textbf{medidas diarias} de radiación
+  solar de 3 estaciones meteorológicas (recomendable longitud de 10
+  años).
 \item Filtra cada serie empleando límites físicos. \label{filtrado}
-\item Elige una localización dentro del perímetro definido por las tres estaciones. Obtén las \textbf{12 medias mensuales} en esta localización empleando interpolación espacial (IDW) a partir de las \textbf{12 medias mensuales} de la radiación filtrada de cada estación (punto \ref{filtrado}). \label{idw}
-\item Obtén medias temporales de radiación solar de un servicio satelital (preferiblemente CMSAF,  empleando QGis o software similar; véanse anexos \ref{sec:qgis} y \ref{sec:cmsaf}) para una región que cubra las tres estaciones\footnote{Los datos de radiación proporcionados por CMSAF son medias diarias de \textbf{irradiancia} (\(W/m^2\)). Por tanto, debes multiplicarlos por 24 para obtener valores diarios de \textbf{irradiación}.}.\label{satelite}
-\item Compara las medias mensuales de las tres estaciones con las estimaciones satelitales empleando métricas estadísticas (MBD, RMSD, MAD).
-\item Combina la estimación satelital en la localización del punto \ref{idw} con las medias mensuales obtenidas en ese punto.
+\item Elige una localización dentro del perímetro definido por las
+  tres estaciones. Obtén las \textbf{12 medias mensuales} en esta
+  localización empleando interpolación espacial (IDW) a partir de las
+  \textbf{12 medias mensuales} de la radiación filtrada de cada
+  estación (punto \ref{filtrado}). \label{idw}
+\item Obtén medias temporales de radiación solar de un servicio
+  satelital (preferiblemente CMSAF, empleando QGis o software similar;
+  véanse los anexos \ref{sec:cmsaf} y \ref{sec:qgis}) para una región que
+  cubra las tres estaciones\footnote{Los datos de radiación
+    proporcionados por CMSAF son medias diarias de
+    \textbf{irradiancia} (\(W/m^2\)). Por tanto, debes multiplicarlos
+    por 24 para obtener valores diarios de
+    \textbf{irradiación}.}.\label{satelite}
+\item Compara las medias mensuales de las tres estaciones con las
+  estimaciones satelitales empleando métricas estadísticas (MBD, RMSD,
+  MAD).
+\item Combina la estimación satelital en la localización del punto
+  \ref{idw} con las medias mensuales obtenidas en ese punto.
 \end{enumerate}
 
 \clearpage
 
 \section{Radiación en el plano del generador}
 
-A continuación, realizaremos el cálculo de la \textbf{radiación en el plano del generador}. Este generador está localizado en el hemisferio norte, orientado al sur y con una inclinación de 30º. Seguiremos el siguiente itinerario:
+A continuación, realizaremos el cálculo de la \textbf{radiación en el
+  plano del generador}. Este generador está localizado en el
+hemisferio norte, orientado al sur y con una inclinación de
+30º. Seguiremos el siguiente itinerario:
 
 \begin{enumerate}
-\item En la localización elegida en el punto \ref{idw} anterior, calcula la declinación, duración del día, e irradiación extra-atmosférica diaria en el plano horizontal \textbf{para los días promedio}.
-\item Calcula el índice de claridad y fracción de difusa para las 12 medias mensuales obtenidas en el punto \ref{satelite} del apartado anterior (o, en su defecto, punto \ref{idw}). Con estos parámetros obtén las medias mensuales de irradiación difusa y directa diarias en el plano horizontal.
-\item Calcula el coseno del ángulo cenital y el coseno del ángulo de incidencia para cada día promedio (mes). Deberías obtener 24 valores por día (un total de 12·24=288 valores por parámetro).
-\item Calcula los perfiles intradiaarios rd y rg para cada dia promedio (mes). Deberías obtener 24 valores por mes (un total de 12·24=288 valores por parámetro).
-\item Obtén los perfiles de irradiancia difusa, global y diaria para cada día promedio (mes). Deberías obtener 24 valores por mes (un total de 12·24=288 valores por componente).
-\item Obtén la irradiancia en el plano del generador realizando la transformación de los valores del punto 12 del plano horizontal al plano del generador.
-\item Suma los resultados del paso anterior para obtener las 12 medias mensuales de radiación diaria (global, difusa y directa) en el plano del generador. Comprueba que estos resultados son superiores a los valores de la radiación en el plano horizontal.
+\item En la localización elegida en el punto \ref{idw} anterior,
+  calcula la declinación, duración del día, e irradiación
+  extra-atmosférica diaria en el plano horizontal \textbf{para los
+    días promedio}.
+\item Calcula el índice de claridad y fracción de difusa para las 12
+  medias mensuales obtenidas en el punto \ref{satelite} del apartado
+  anterior (o, en su defecto, punto \ref{idw}). Con estos parámetros
+  obtén las medias mensuales de irradiación difusa y directa diarias
+  en el plano horizontal.
+\item Calcula el coseno del ángulo cenital y el coseno del ángulo de
+  incidencia para cada día promedio (mes). Deberías obtener 24 valores
+  por día (un total de 12·24=288 valores por parámetro).
+\item Calcula los perfiles intradiaarios rd y rg para cada dia
+  promedio (mes). Deberías obtener 24 valores por mes (un total de
+  12·24=288 valores por parámetro).
+\item Obtén los perfiles de irradiancia difusa, global y diaria para
+  cada día promedio (mes). Deberías obtener 24 valores por mes (un
+  total de 12·24=288 valores por componente).
+\item Obtén la irradiancia en el plano del generador realizando la
+  transformación de los valores del punto 12 del plano horizontal al
+  plano del generador.
+\item Suma los resultados del paso anterior para obtener las 12 medias
+  mensuales de radiación diaria (global, difusa y directa) en el plano
+  del generador. Comprueba que estos resultados son superiores a los
+  valores de la radiación en el plano horizontal.
 \end{enumerate}
 
 \clearpage
+\section{Anexo: CM-SAF}
+\label{sec:cmsaf}
+\href{https://wui.cmsaf.eu/safira/action/viewProduktSearch}{CM-SAF}
+proporciona datos derivados de imágenes de satélite:
+\begin{itemize}
+\item \emph{Operational Products}: conjuntos de datos proporcionados casi en
+  tiempo real.
+
+\item \emph{Climate Data Records (CDR)}: series temporales de medidas de
+  longitud, consistencia, y continuidad suficiente para determinar la
+  variabilidad y cambios en el clima.
+\end{itemize}
+
+Los datos de radiación global se denominan \emph{Surface incoming
+  shortwave radiation} (SIS). Para esta práctica utilizaremos
+productos operacionales y las medias mensuales, disponibles
+en:
+\url{https://wui.cmsaf.eu/safira/action/viewProduktDetails?eid=21989_21990&fid=27}.
+
+Para obtener estos datos para una región de interés hay que seguir
+este procedimiento:
+\begin{enumerate}
+\item Elegir la región: \emph{Change projection / spatial resolution /
+    domain}. En este apartado se puede definir la región de forma
+  gráfica en el mapa o rellenando en los recuadros de longitud y
+  latitud que hay a continuación. Una vez definida la zona, pasamos al
+  siguiente apartado.
+\item Definir el rango temporal: \emph{Proceed to time range
+    selection}. En este apartado se indica el comienzo y final
+  deseado. Al ser medias mensuales, obtendremos un fichero raster para
+  cada mes de este rango. Por ejemplo, si elegimos un rango temporal
+  que incluye 10 años, obtendremos 120 ficheros raster. Para esta
+  práctica lo haremos de forma más simplificado, eligiendo únicamente
+  un año para obtener 12 ficheros raster, por ejemplo desde 2022-01-01
+  hasta 2022-12-31.
+\item Una vez definida la región y el rango temporal, se puede
+  realizar la solicitud: \emph{Add to order cart}. Para poder
+  finalizar la solicitud es necesario tener usuario y contraseña. Si
+  no es así, hay que registrarse de forma gratuita.
+\item Tras realizar la solicitud se recibirá una notificación por
+  correo electrónico pasado un tiempo que depende del tamaño de los
+  ficheros solicitados. En este correo se incluye un enlace para
+  realizar la descarga de los ficheros desde un servidor FTP.
+\end{enumerate}
 
 \section{Anexo: QGIS}
 \label{sec:qgis}
 
-\href{https://qgis.org/es/site/}{QGIS} is un proyecto de código abierto de un \href{https://es.wikipedia.org/wiki/Sistema\_de\_informaci\%C3\%B3n\_geogr\%C3\%A1fica}{sistema de información
-geográfica} (SIG). Este software es capaz de manejar datos
-vectoriales (puntos, líneas y polígonos) y tipo raster (matrices de
-datos georeferenciados).
+\href{https://qgis.org/es/site/}{QGIS} is un proyecto de código
+abierto de
+un
+\href{https://es.wikipedia.org/wiki/Sistema\_de\_informaci\%C3\%B3n\_geogr\%C3\%A1fica}{sistema
+  de información geográfica} (SIG). Este software es capaz de manejar
+datos vectoriales (puntos, líneas y polígonos) y tipo raster (matrices
+de datos georeferenciados).
 
-Deberías leer \href{https://docs.qgis.org/3.22/es/docs/user\_manual/working\_with\_raster/index.html}{este tutorial} para aprender a trabajar con ficheros tipo
-raster, y \href{http://docs.qgis.org/3.22/es/docs/user\_manual/working\_with\_vector/index.html}{este tutorial} para trabajar con datos vectoriales.
+Deberías
+leer
+\href{https://docs.qgis.org/3.22/es/docs/user\_manual/working\_with\_raster/index.html}{este
+  tutorial} para aprender a trabajar con ficheros tipo raster,
+y
+\href{http://docs.qgis.org/3.22/es/docs/user\_manual/working\_with\_vector/index.html}{este
+  tutorial} para trabajar con datos vectoriales.
 
-Hay varios plugins que proporcionan capacidades adicionales. \href{https://docs.qgis.org/3.22/es/docs/training\_manual/qgis\_plugins/fetching\_plugins.html}{Este
-documento} es una guía en el proceso de instalación y utilización de
+Hay varios plugins que proporcionan capacidades
+adicionales. \href{https://docs.qgis.org/3.22/es/docs/training\_manual/qgis\_plugins/fetching\_plugins.html}{Este
+  documento} es una guía en el proceso de instalación y utilización de
 plugins. Te pueden interesar los siguientes:
 
 \begin{itemize}
-\item \href{https://plugins.qgis.org/plugins/pointsamplingtool/}{Point sampling tool}, para extraer valores de un fichero raster en un
-punto concreto.
-\item \href{https://docs.qgis.org/3.22/es/docs/user\_manual/plugins/plugins\_interpolation.html}{Interpolation} plugin, para realizar una interpolación IDW de datos
-vectoriales.
-\item Además, también es recomendable el plugin para utilizar \href{https://grass.osgeo.org/}{GRASS}. \href{http://docs.qgis.org/3.22/es/docs/user\_manual/grass\_integration/grass\_integration.html}{Este
-documento} proporciona instrucciones para instalarlo y trabajar con
-él.
+\item \href{https://plugins.qgis.org/plugins/pointsamplingtool/}{Point
+    sampling tool}, para extraer valores de un fichero raster en un
+  punto concreto.
+\item
+  \href{https://docs.qgis.org/3.22/es/docs/user\_manual/plugins/plugins\_interpolation.html}{Interpolation} plugin,
+  para realizar una interpolación IDW de datos vectoriales.
+\item Además, también es recomendable el plugin para
+  utilizar \href{https://grass.osgeo.org/}{GRASS}. \href{http://docs.qgis.org/3.22/es/docs/user\_manual/grass\_integration/grass\_integration.html}{Este
+    documento} proporciona instrucciones para instalarlo y trabajar
+  con él.
 \end{itemize}
 
 \subsection*{Procedimiento}
@@ -92,42 +187,22 @@ documento} proporciona instrucciones para instalarlo y trabajar con
 \item Añadir capa ráster: leer los 12 ficheros .nc de CMSAF.
 \item Establecer proyección a EPSG:4326
 \item Calculador raster: doble click en la capa, y en la expresión del
-cuadro inferior multiplicar por 24 (create on-the-fly raster).
-\item Añadir capa de texto delimitado: leer fichero SIAR.csv (ubicaciones
-de estaciones). Establecer proyección a EPSG:4326.
+  cuadro inferior multiplicar por 24 (create on-the-fly raster).
+\item Añadir capa de texto delimitado: leer fichero SIAR.csv
+  (ubicaciones de estaciones). Establecer proyección a EPSG:4326.
 \item Utilizar \emph{Point sampling tool}
-\begin{enumerate}
-\item \emph{Layer containing sampling points} : SIAR
-\item \emph{Layers with bands to get values from}: 12 SISmm.
-\item \emph{Output point vector layer}: \emph{Browse}) y crear un nuevo fichero.
-\item Aceptar: aparece una nueva capa con el nombre del fichero creado.
-\item En esta nueva capa, con el botón derecho aparece un menú de
-  opciones: tabla de atributos (valores extraídos). También se puede
-  exportar.
+  \begin{enumerate}
+  \item \emph{Layer containing sampling points} : SIAR
+  \item \emph{Layers with bands to get values from}: 12 SISmm.
+  \item \emph{Output point vector layer}: \emph{Browse} y crear un
+    nuevo fichero.
+  \item Aceptar: aparece una nueva capa con el nombre del fichero
+    creado.
+  \item En esta nueva capa, con el botón derecho aparece un menú de
+    opciones: tabla de atributos (valores extraídos). También se puede
+    exportar.
+  \end{enumerate}
 \end{enumerate}
-\end{enumerate}
 
-\section{Anexo: CM-SAF}
-\label{sec:cmsaf}
-\href{https://wui.cmsaf.eu/safira/action/viewProduktSearch}{CM-SAF}
-proporciona datos derivados de imágenes de satélite:
-\begin{itemize}
-\item Operational Products: conjuntos de datos proporcionados casi en
-  tiempo real.
-
-\item Climate Data Records (CDR): series temporales de medidas de
-  longitud, consistencia, y continuidad suficiente para determinar la
-  variabilidad y cambios en el clima.
-\end{itemize}
-
-Los datos de radiación global se denominan \emph{Surface incoming shortwave radiation} (SIS). Para esta práctica utilizaremos productos operacionales y las medias mensuales, disponibles en: \url{https://wui.cmsaf.eu/safira/action/viewProduktDetails?eid=21989_21990&fid=27}.
-
-Para obtener estos datos para una región de interés hay que seguir este procedimiento:
-
-\begin{enumerate}
-\item Elegir la región: \emph{Change projection / spatial resolution / domain}. En este apartado se puede definir la región de forma gráfica en el mapa o rellenando en los recuadros de longitud y latitud que hay a continuación. Una vez definida la zona, pasamos al siguiente apartado.
-\item Definir el rango temporal: \emph{Proceed to time range selection}. En este apartado se indica el comienzo y final deseado. Al ser medias mensuales, obtendremos un fichero raster para cada mes de este rango. Por ejemplo, si elegimos un rango temporal que incluye 10 años, obtendremos 120 ficheros raster. Para esta práctica lo haremos de forma más simplificado, eligiendo únicamente un año para obtener 12 ficheros raster, por ejemplo desde 2022-01-01 hasta 2022-12-31. 
-\item Una vez definida la región y el rango temporal, se puede realizar la solicitud: \emph{Add to order cart}. Para poder finalizar la solicitud es necesario tener usuario y contraseña. Si no es así, hay que registrarse de forma gratuita.
-\end{enumerate}
 
 \end{document}
